PDFDocBuilder/bin/Debug/Import/C/DebenuPDFLibraryDLL1114.h

__declspec(dllimport) int __stdcall DPLGetObjectCount(int instanceID);
__declspec(dllimport) int __stdcall DPLGetObjectDecodeError(int instanceID, int ObjectNumber);
__declspec(dllimport) char* __stdcall DPLGetObjectToString(int instanceID, int ObjectNumber);
__declspec(dllimport) int __stdcall DPLGetOpenActionDestination(int instanceID);
__declspec(dllimport) wchar_t* __stdcall DPLGetOpenActionJavaScript(int instanceID);
__declspec(dllimport) char* __stdcall DPLGetOpenActionJavaScriptA(int instanceID);
__declspec(dllimport) int __stdcall DPLGetOptionalContentConfigCount(int instanceID);
__declspec(dllimport) int __stdcall DPLGetOptionalContentConfigLocked(int instanceID, int OptionalContentConfigID, int OptionalContentGroupID);
__declspec(dllimport) int __stdcall DPLGetOptionalContentConfigOrderCount(int instanceID, int OptionalContentConfigID);
__declspec(dllimport) int __stdcall DPLGetOptionalContentConfigOrderItemID(int instanceID, int OptionalContentConfigID, int ItemIndex);
__declspec(dllimport) wchar_t* __stdcall DPLGetOptionalContentConfigOrderItemLabel(int instanceID, int OptionalContentConfigID, int ItemIndex);
__declspec(dllimport) char* __stdcall DPLGetOptionalContentConfigOrderItemLabelA(int instanceID, int OptionalContentConfigID, int ItemIndex);
__declspec(dllimport) int __stdcall DPLGetOptionalContentConfigOrderItemLevel(int instanceID, int OptionalContentConfigID, int ItemIndex);
__declspec(dllimport) int __stdcall DPLGetOptionalContentConfigOrderItemType(int instanceID, int OptionalContentConfigID, int ItemIndex);
__declspec(dllimport) int __stdcall DPLGetOptionalContentConfigState(int instanceID, int OptionalContentConfigID, int OptionalContentGroupID);
__declspec(dllimport) int __stdcall DPLGetOptionalContentGroupID(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetOptionalContentGroupName(int instanceID, int OptionalContentGroupID);
__declspec(dllimport) char* __stdcall DPLGetOptionalContentGroupNameA(int instanceID, int OptionalContentGroupID);
__declspec(dllimport) int __stdcall DPLGetOptionalContentGroupPrintable(int instanceID, int OptionalContentGroupID);
__declspec(dllimport) int __stdcall DPLGetOptionalContentGroupVisible(int instanceID, int OptionalContentGroupID);
__declspec(dllimport) int __stdcall DPLGetOrigin(int instanceID);
__declspec(dllimport) int __stdcall DPLGetOutlineActionID(int instanceID, int OutlineID);
__declspec(dllimport) double __stdcall DPLGetOutlineColor(int instanceID, int OutlineID, int ColorComponent);
__declspec(dllimport) int __stdcall DPLGetOutlineDest(int instanceID, int OutlineID);
__declspec(dllimport) int __stdcall DPLGetOutlineID(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetOutlineJavaScript(int instanceID, int OutlineID);
__declspec(dllimport) char* __stdcall DPLGetOutlineJavaScriptA(int instanceID, int OutlineID);
__declspec(dllimport) int __stdcall DPLGetOutlineObjectNumber(int instanceID, int OutlineID);
__declspec(dllimport) wchar_t* __stdcall DPLGetOutlineOpenFile(int instanceID, int OutlineID);
__declspec(dllimport) char* __stdcall DPLGetOutlineOpenFileA(int instanceID, int OutlineID);
__declspec(dllimport) int __stdcall DPLGetOutlinePage(int instanceID, int OutlineID);
__declspec(dllimport) int __stdcall DPLGetOutlineStyle(int instanceID, int OutlineID);
__declspec(dllimport) wchar_t* __stdcall DPLGetOutlineWebLink(int instanceID, int OutlineID);
__declspec(dllimport) char* __stdcall DPLGetOutlineWebLinkA(int instanceID, int OutlineID);
__declspec(dllimport) double __stdcall DPLGetPageBox(int instanceID, int BoxType, int Dimension);
__declspec(dllimport) wchar_t* __stdcall DPLGetPageColorSpaces(int instanceID, int Options);
__declspec(dllimport) char* __stdcall DPLGetPageColorSpacesA(int instanceID, int Options);
__declspec(dllimport) char* __stdcall DPLGetPageContentToString(int instanceID);
__declspec(dllimport) int __stdcall DPLGetPageImageList(int instanceID, int Options);
__declspec(dllimport) wchar_t* __stdcall DPLGetPageJavaScript(int instanceID, wchar_t * ActionType);
__declspec(dllimport) char* __stdcall DPLGetPageJavaScriptA(int instanceID, char * ActionType);
__declspec(dllimport) wchar_t* __stdcall DPLGetPageLGIDictContent(int instanceID, int DictIndex);
__declspec(dllimport) char* __stdcall DPLGetPageLGIDictContentA(int instanceID, int DictIndex);
__declspec(dllimport) int __stdcall DPLGetPageLGIDictCount(int instanceID);
__declspec(dllimport) wchar_t* __stdcall DPLGetPageLabel(int instanceID, int Page);
__declspec(dllimport) char* __stdcall DPLGetPageLabelA(int instanceID, int Page);
__declspec(dllimport) int __stdcall DPLGetPageLayout(int instanceID);
__declspec(dllimport) char* __stdcall DPLGetPageMetricsToString(int instanceID, int StartPage, int EndPage, int Options);
__declspec(dllimport) int __stdcall DPLGetPageMode(int instanceID);
__declspec(dllimport) wchar_t* __stdcall DPLGetPageText(int instanceID, int ExtractOptions);
__declspec(dllimport) char* __stdcall DPLGetPageTextA(int instanceID, int ExtractOptions);
__declspec(dllimport) double __stdcall DPLGetPageUserUnit(int instanceID);
__declspec(dllimport) int __stdcall DPLGetPageViewPortCount(int instanceID);
__declspec(dllimport) int __stdcall DPLGetPageViewPortID(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetParentOutline(int instanceID, int OutlineID);
__declspec(dllimport) int __stdcall DPLGetPrevOutline(int instanceID, int OutlineID);
__declspec(dllimport) char* __stdcall DPLGetPrintPreviewBitmapToString(int instanceID, wchar_t * PrinterName, int PreviewPage, int PrintOptions, int MaxDimension, int PreviewOptions);
__declspec(dllimport) char* __stdcall DPLGetPrintPreviewBitmapToStringA(int instanceID, char * PrinterName, int PreviewPage, int PrintOptions, int MaxDimension, int PreviewOptions);
__declspec(dllimport) wchar_t* __stdcall DPLGetPrinterBins(int instanceID, wchar_t * PrinterName);
__declspec(dllimport) char* __stdcall DPLGetPrinterBinsA(int instanceID, char * PrinterName);
__declspec(dllimport) char* __stdcall DPLGetPrinterDevModeToString(int instanceID, wchar_t * PrinterName);
__declspec(dllimport) char* __stdcall DPLGetPrinterDevModeToStringA(int instanceID, char * PrinterName);
__declspec(dllimport) wchar_t* __stdcall DPLGetPrinterMediaTypes(int instanceID, wchar_t * PrinterName);
__declspec(dllimport) char* __stdcall DPLGetPrinterMediaTypesA(int instanceID, char * PrinterName);
__declspec(dllimport) wchar_t* __stdcall DPLGetPrinterNames(int instanceID);
__declspec(dllimport) char* __stdcall DPLGetPrinterNamesA(int instanceID);
__declspec(dllimport) double __stdcall DPLGetRenderScale(int instanceID);
__declspec(dllimport) int __stdcall DPLGetSignProcessByteRange(int instanceID, int SignProcessID, int ArrayPosition);
__declspec(dllimport) int __stdcall DPLGetSignProcessResult(int instanceID, int SignProcessID);
__declspec(dllimport) int __stdcall DPLGetStringListCount(int instanceID, int StringListID);
__declspec(dllimport) wchar_t* __stdcall DPLGetStringListItem(int instanceID, int StringListID, int ItemIndex);
__declspec(dllimport) char* __stdcall DPLGetStringListItemA(int instanceID, int StringListID, int ItemIndex);
__declspec(dllimport) wchar_t* __stdcall DPLGetTabOrderMode(int instanceID);
__declspec(dllimport) char* __stdcall DPLGetTabOrderModeA(int instanceID);
__declspec(dllimport) double __stdcall DPLGetTableCellDblProperty(int instanceID, int TableID, int RowNumber, int ColumnNumber, int Tag);
__declspec(dllimport) int __stdcall DPLGetTableCellIntProperty(int instanceID, int TableID, int RowNumber, int ColumnNumber, int Tag);
__declspec(dllimport) wchar_t* __stdcall DPLGetTableCellStrProperty(int instanceID, int TableID, int RowNumber, int ColumnNumber, int Tag);
__declspec(dllimport) char* __stdcall DPLGetTableCellStrPropertyA(int instanceID, int TableID, int RowNumber, int ColumnNumber, int Tag);
__declspec(dllimport) int __stdcall DPLGetTableColumnCount(int instanceID, int TableID);
__declspec(dllimport) int __stdcall DPLGetTableLastDrawnRow(int instanceID, int TableID);
__declspec(dllimport) int __stdcall DPLGetTableRowCount(int instanceID, int TableID);
__declspec(dllimport) wchar_t* __stdcall DPLGetTempPath(int instanceID);
__declspec(dllimport) char* __stdcall DPLGetTempPathA(int instanceID);