PDFDocBuilder/bin/Debug/Import/VB6/DebenuPDFLibraryDLL1114.bas

Public Declare Function DPLGetObjectCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetObjectCount" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetObjectDecodeError LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetObjectDecodeError" ( _
  ByVal iInstanceID As Long, ByVal iObjectNumber As Long) As Long
Public Declare Function DPLGetObjectToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetObjectToString" ( _
  ByVal iInstanceID As Long, ByVal iObjectNumber As Long) As String
Public Declare Function DPLGetOpenActionDestination LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOpenActionDestination" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetOpenActionJavaScript LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOpenActionJavaScriptA" (ByVal iInstanceID As Long) As String
Public Declare Function DPLGetOptionalContentConfigCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOptionalContentConfigCount" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetOptionalContentConfigLocked LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOptionalContentConfigLocked" ( _
  ByVal iInstanceID As Long, ByVal iOptionalContentConfigID As Long, _
  ByVal iOptionalContentGroupID As Long) As Long
Public Declare Function DPLGetOptionalContentConfigOrderCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOptionalContentConfigOrderCount" ( _
  ByVal iInstanceID As Long, ByVal iOptionalContentConfigID As Long) As Long
Public Declare Function DPLGetOptionalContentConfigOrderItemID LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOptionalContentConfigOrderItemID" ( _
  ByVal iInstanceID As Long, ByVal iOptionalContentConfigID As Long, _
  ByVal iItemIndex As Long) As Long
Public Declare Function DPLGetOptionalContentConfigOrderItemLabel LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOptionalContentConfigOrderItemLabelA" ( _
  ByVal iInstanceID As Long, ByVal iOptionalContentConfigID As Long, _
  ByVal iItemIndex As Long) As String
Public Declare Function DPLGetOptionalContentConfigOrderItemLevel LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOptionalContentConfigOrderItemLevel" ( _
  ByVal iInstanceID As Long, ByVal iOptionalContentConfigID As Long, _
  ByVal iItemIndex As Long) As Long
Public Declare Function DPLGetOptionalContentConfigOrderItemType LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOptionalContentConfigOrderItemType" ( _
  ByVal iInstanceID As Long, ByVal iOptionalContentConfigID As Long, _
  ByVal iItemIndex As Long) As Long
Public Declare Function DPLGetOptionalContentConfigState LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOptionalContentConfigState" ( _
  ByVal iInstanceID As Long, ByVal iOptionalContentConfigID As Long, _
  ByVal iOptionalContentGroupID As Long) As Long
Public Declare Function DPLGetOptionalContentGroupID LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOptionalContentGroupID" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetOptionalContentGroupName LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOptionalContentGroupNameA" ( _
  ByVal iInstanceID As Long, ByVal iOptionalContentGroupID As Long) As String
Public Declare Function DPLGetOptionalContentGroupPrintable LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOptionalContentGroupPrintable" ( _
  ByVal iInstanceID As Long, ByVal iOptionalContentGroupID As Long) As Long
Public Declare Function DPLGetOptionalContentGroupVisible LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOptionalContentGroupVisible" ( _
  ByVal iInstanceID As Long, ByVal iOptionalContentGroupID As Long) As Long
Public Declare Function DPLGetOrigin LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOrigin" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetOutlineActionID LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOutlineActionID" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long) As Long
Public Declare Function DPLGetOutlineColor LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOutlineColor" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long, _
  ByVal iColorComponent As Long) As Double
Public Declare Function DPLGetOutlineDest LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOutlineDest" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long) As Long
Public Declare Function DPLGetOutlineID LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOutlineID" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetOutlineJavaScript LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOutlineJavaScriptA" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long) As String
Public Declare Function DPLGetOutlineObjectNumber LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOutlineObjectNumber" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long) As Long
Public Declare Function DPLGetOutlineOpenFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOutlineOpenFileA" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long) As String
Public Declare Function DPLGetOutlinePage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOutlinePage" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long) As Long
Public Declare Function DPLGetOutlineStyle LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOutlineStyle" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long) As Long
Public Declare Function DPLGetOutlineWebLink LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetOutlineWebLinkA" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long) As String
Public Declare Function DPLGetPageBox LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageBox" ( _
  ByVal iInstanceID As Long, ByVal iBoxType As Long, _
  ByVal iDimension As Long) As Double
Public Declare Function DPLGetPageColorSpaces LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageColorSpacesA" ( _
  ByVal iInstanceID As Long, ByVal iOptions As Long) As String
Public Declare Function DPLGetPageContentToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageContentToString" (ByVal iInstanceID As Long) As String
Public Declare Function DPLGetPageImageList LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageImageList" ( _
  ByVal iInstanceID As Long, ByVal iOptions As Long) As Long
Public Declare Function DPLGetPageJavaScript LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageJavaScriptA" ( _
  ByVal iInstanceID As Long, ByVal sActionType As String) As String
Public Declare Function DPLGetPageLGIDictContent LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageLGIDictContentA" ( _
  ByVal iInstanceID As Long, ByVal iDictIndex As Long) As String
Public Declare Function DPLGetPageLGIDictCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageLGIDictCount" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetPageLabel LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageLabelA" ( _
  ByVal iInstanceID As Long, ByVal iPage As Long) As String
Public Declare Function DPLGetPageLayout LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageLayout" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetPageMetricsToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageMetricsToString" ( _
  ByVal iInstanceID As Long, ByVal iStartPage As Long, ByVal iEndPage As Long, _
  ByVal iOptions As Long) As String
Public Declare Function DPLGetPageMode LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageMode" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetPageText LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageTextA" ( _
  ByVal iInstanceID As Long, ByVal iExtractOptions As Long) As String
Public Declare Function DPLGetPageUserUnit LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageUserUnit" (ByVal iInstanceID As Long) As Double
Public Declare Function DPLGetPageViewPortCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageViewPortCount" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetPageViewPortID LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPageViewPortID" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetParentOutline LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetParentOutline" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long) As Long
Public Declare Function DPLGetPrevOutline LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPrevOutline" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long) As Long
Public Declare Function DPLGetPrintPreviewBitmapToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPrintPreviewBitmapToStringA" ( _
  ByVal iInstanceID As Long, ByVal sPrinterName As String, _
  ByVal iPreviewPage As Long, ByVal iPrintOptions As Long, _
  ByVal iMaxDimension As Long, ByVal iPreviewOptions As Long) As String
Public Declare Function DPLGetPrinterBins LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPrinterBinsA" ( _
  ByVal iInstanceID As Long, ByVal sPrinterName As String) As String
Public Declare Function DPLGetPrinterDevModeToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPrinterDevModeToStringA" ( _
  ByVal iInstanceID As Long, ByVal sPrinterName As String) As String
Public Declare Function DPLGetPrinterMediaTypes LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPrinterMediaTypesA" ( _
  ByVal iInstanceID As Long, ByVal sPrinterName As String) As String
Public Declare Function DPLGetPrinterNames LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetPrinterNamesA" (ByVal iInstanceID As Long) As String
Public Declare Function DPLGetRenderScale LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetRenderScale" (ByVal iInstanceID As Long) As Double
Public Declare Function DPLGetSignProcessByteRange LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetSignProcessByteRange" ( _
  ByVal iInstanceID As Long, ByVal iSignProcessID As Long, _
  ByVal iArrayPosition As Long) As Long
Public Declare Function DPLGetSignProcessResult LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetSignProcessResult" ( _
  ByVal iInstanceID As Long, ByVal iSignProcessID As Long) As Long
Public Declare Function DPLGetStringListCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetStringListCount" ( _
  ByVal iInstanceID As Long, ByVal iStringListID As Long) As Long
Public Declare Function DPLGetStringListItem LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetStringListItemA" ( _
  ByVal iInstanceID As Long, ByVal iStringListID As Long, _
  ByVal iItemIndex As Long) As String
Public Declare Function DPLGetTabOrderMode LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetTabOrderModeA" (ByVal iInstanceID As Long) As String
Public Declare Function DPLGetTableCellDblProperty LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetTableCellDblProperty" ( _
  ByVal iInstanceID As Long, ByVal iTableID As Long, ByVal iRowNumber As Long, _
  ByVal iColumnNumber As Long, ByVal iTag As Long) As Double
Public Declare Function DPLGetTableCellIntProperty LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetTableCellIntProperty" ( _
  ByVal iInstanceID As Long, ByVal iTableID As Long, ByVal iRowNumber As Long, _
  ByVal iColumnNumber As Long, ByVal iTag As Long) As Long
Public Declare Function DPLGetTableCellStrProperty LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetTableCellStrPropertyA" ( _
  ByVal iInstanceID As Long, ByVal iTableID As Long, ByVal iRowNumber As Long, _
  ByVal iColumnNumber As Long, ByVal iTag As Long) As String
Public Declare Function DPLGetTableColumnCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetTableColumnCount" ( _
  ByVal iInstanceID As Long, ByVal iTableID As Long) As Long
Public Declare Function DPLGetTableLastDrawnRow LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetTableLastDrawnRow" ( _
  ByVal iInstanceID As Long, ByVal iTableID As Long) As Long
Public Declare Function DPLGetTableRowCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetTableRowCount" ( _
  ByVal iInstanceID As Long, ByVal iTableID As Long) As Long
Public Declare Function DPLGetTempPath LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetTempPathA" (ByVal iInstanceID As Long) As String
